AC_INIT([elfeed-score], [0.7.0], [sp1ff@pobox.com], [elfeed-score], [https://github.com/sp1ff/elfeed-score])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([./elfeed-score.el])

AM_INIT_AUTOMAKE([-Wall -Werror gnits std-options dist-bzip2 dist-xz])

AM_PATH_LISPDIR

AC_CONFIG_FILES([Makefile test/Makefile])
AC_OUTPUT
