AC_PREREQ([2.69])
AC_INIT([elfeed-score], [1.2.9], [sp1ff@pobox.com], [elfeed-score], [https://github.com/sp1ff/elfeed-score])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([./elfeed-score.el])
AC_PROG_MAKE_SET

AM_INIT_AUTOMAKE([-Wall -Werror gnits std-options dist-xz dist-zstd])

AM_PATH_LISPDIR

AC_CONFIG_FILES([Makefile doc/Makefile test/Makefile])
AC_OUTPUT
